--- a/templates/widget/main.scss
+++ b/templates/widget/main.scss
@@ -24,6 +24,7 @@ body {
 
 .widget__inner-container {
 	align-items: center;
+	justify-content: space-between;
 	box-sizing: border-box;
 	display: flex;
 	height: 100%;
@@ -101,17 +102,17 @@ body {
 }
 
 /* progress bar courtesy of https://codepen.io/Bizzy-Coding/pen/poOymVJ?editors=1111 */
-.progress__bar {
-	position: relative;
-	height: 5px;
-	width: 100%;
-	background: #fff;
-	border-radius: 15px;
-}
+// .progress__bar {
+// 	position: relative;
+// 	height: 5px;
+// 	width: 100%;
+// 	background: #fff;
+// 	border-radius: 15px;
+// }
 
-.progress__fill {
-	background: #65a2e0;
-	border-radius: 15px;
-	height: 100%;
-	width: 0%;
-}
+// .progress__fill {
+// 	background: #65a2e0;
+// 	border-radius: 15px;
+// 	height: 100%;
+// 	width: 0%;
+// }
